fix(mobile) Recomendations/Details page - wrong background color [OAPTAU-382]
- hidden background canvas on details page list view

--- a/tau/src/css/profile/mobile/changeable/common/listview.less
+++ b/tau/src/css/profile/mobile/changeable/common/listview.less
@@ -362,6 +362,9 @@
 				line-height: 43 * @unit_base;
 			}
 		}
+		.ui-listview-background {
+			display: none;
+		}
 	}
 
 	.li-has-right-btn {
